--- a/aboutus.html
+++ b/aboutus.html
@@ -43,6 +43,11 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="row">
+                    <div class="col-12 col-sm align-self-center">
+                        <button type="button" class="btn btn-sm btn-warning" onClick="$('#reserve_table').focus()"><a href="./index.html">Reserve Table</button>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
