Tabs, Pills, Javascript components, Carousels, Modals

--- a/contactus.html
+++ b/contactus.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm align-self-center">
-                        <button type="button" class="btn btn-sm btn-warning" onClick="$('#reserve_table').focus()"><a href="./index.html">Reserve Table</button>
+                        <button type="button" class="btn btn-sm btn-warning" onClick="$('#reserve_table').focus()"><a href="./index.html#reserve_table">Reserve Table</a></button>
                     </div>
                 </div>
             </div>
